CD/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
    app.kubernetes.io/component: spring-boot-app
    app.kubernetes.io/instance: spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: spring-boot-app
  template:
    metadata:
      labels:
        deployment: spring-boot-app
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: spring-boot-app
          image@ quay.io/rh_ee_tavelino/spring-boot-app:latest@sha256:287f8fcac51e69d5e1434e1ec9a80d66a2da69f8de5dc3e733d11d24bf7da10a
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
