CD/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
    app.kubernetes.io/component: spring-boot-app
    app.kubernetes.io/instance: spring-boot-app
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  selector:
    deployment: spring-boot-app
status:
  loadBalancer: {}
