CD/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
    app.kubernetes.io/component: spring-boot-app
    app.kubernetes.io/instance: spring-boot-app
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: spring-boot-app
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
